fix some small layout issues

--- a/resources/problem.scss
+++ b/resources/problem.scss
@@ -431,7 +431,7 @@ ul.problem-list {
         gap: 0;
         width: 100%;
         position: relative;
-        height: calc(100vh - 250px); // Fixed height for full viewport
+        // Height is set dynamically via JS to fit viewport minus footer
         min-height: 600px;
     }
 
